Camel: VACUUM cannot run from within a transaction
I get this VACUUM error whenever I change between the email accounts listed in the left-hand folder pane (e.g., if I select the "Inbox" from a gmail account when I had previously selected a folder (e.g., "Inbox" or "Sent" in a hotmail account)):
Error while Storing folder “Sent”.
cannot VACUUM from within a transaction
The same error (with a different "folder" denoted) occurs when I switch from "Search Folders" to one of the email accounts.
INFO:
evolution 3.42
System:
Host: manjaro-yoga Kernel: 5.10.89-1-MANJARO x86_64 bits: 64
Desktop: GNOME 41.2 Distro: Manjaro Linux
Manjaro Linux
DISTRIB_ID=ManjaroLinux
DISTRIB_RELEASE=21.2.1
DISTRIB_CODENAME=Qonos
Edited by Milan Crha