I#413 - Camel: VACUUM cannot run from within a transaction

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/413